# pygame_game

./: .flake8  .gitignore  pyproject.toml  pytest.ini
.github/workflows/: auto_test.yml
src/pygame_game/: __init__.py
tests/: test_action.py
