[project]
name = "pygame-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xiaoxixi", email = "xiaoxixi202205@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pygame-pgu>=0.21",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
