[project]
name = "pygame-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xiaoxixi", email = "xiaoxixi202205@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pygame-gui>=0.6.14",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
