[project]
name = "pygame-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xiaoxixi", email = "xiaoxixi202205@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pygame-gui>=0.6.14",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "viztracer>=1.0.4",
]
